<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="debug_menu_ad_information">Ad Information</string>
    <string name="debug_menu_creative_preview">Creative Preview</string>
    <string name="debug_menu_title">Select a Debug Mode</string>
    <string name="debug_menu_troubleshooting">Troubleshooting</string>
    <string name="decline">Decline</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="action_settings">Settings</string>
    <string name="add_widget">Add widget</string>
    <string name="addawordtofavoritecat">Favorilerinize en az bir kelime ekleyiniz.</string>
    <string name="adds">REKLAM</string>
    <string name="addtofavorite"> favorilere eklendi.</string>
    <string name="alertcategorycontent2">En fazla 30 kelimeyi favorilerine ekleyebilirsiniz. Favorilerinize daha fazla eklemek için mağazadan tüm seviyeleri aktifleştiriniz.</string>
    <string name="alertfavoritetitle">Favori Kelime Ekleme Uyarısı!</string>
    <string name="alerttesttitle">Kilit Uyarısı!</string>
    <string name="alerttesttitlecontent">Bu teste geçmek için önceki tüm testleri çözünüz veya mağazadan satın alma yapınız.</string>
    <string name="alertupcategorywordcontent">Bu seviyedeki kelimeleri öğrenmek için tüm testleri çözünüz veya mağazadan satın alma yapınız.</string>
    <string name="app_name">YDS 6000 Kelime Ezber</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appwidget_texten">New Word</string>
    <string name="appwidget_texttr">Yeni Kelime</string>
    <string name="banner_ad_unit_id">ca-app-pub-7261129418492163/6365943136</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="buythisproduct">Bu ürünü satın aldınız.</string>
    <string name="cancel">Vazgeç</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="clicktoseeword">Kelimeyi görmek için tıklayınız</string>
    <string name="correctanswer">Doğru Cevap</string>
    <string name="default_web_client_id">1049531924668-k3jm2np8ju1onrdloqe1491cdhfa6d0b.apps.googleusercontent.com</string>
    <string name="define_AndroidActionItemBadge">year;owner</string>
    <string name="define_AndroidIconics">year;owner</string>
    <string name="define_FontAwesome">year;author;libraryName;libraryWebsite</string>
    <string name="define_font_fontawesome">com.mikepenz.fontawesome_typeface_library.FontAwesome</string>
    <string name="dontremindme">Tekrar Hatırlatma!</string>
    <string name="dottest">. Test</string>
    <string name="download">İndir</string>
    <string name="examplesentence">Definition in WordNet</string>
    <string name="exbertitle">Ezber eşik değerinin belirlenmesi</string>
    <string name="ezbertitledialogtitle">Sınanmasını İstediğiniz Test Sayısı</string>
    <string name="ezbertitlesummary">Bir kelimenin ezber sayılması için kaç testten geçilmesi gerektiğini belirler</string>
    <string name="faw_500px">faw_500px</string>
    <string name="faw_address_book">faw_address_book</string>
    <string name="faw_address_book_o">faw_address_book_o</string>
    <string name="faw_address_card">faw_address_card</string>
    <string name="faw_address_card_o">faw_address_card_o</string>
    <string name="faw_adjust">faw_adjust</string>
    <string name="faw_adn">faw_adn</string>
    <string name="faw_align_center">faw_align_center</string>
    <string name="faw_align_justify">faw_align_justify</string>
    <string name="faw_align_left">faw_align_left</string>
    <string name="faw_align_right">faw_align_right</string>
    <string name="faw_amazon">faw_amazon</string>
    <string name="faw_ambulance">faw_ambulance</string>
    <string name="faw_american_sign_language_interpreting">faw_american_sign_language_interpreting</string>
    <string name="faw_anchor">faw_anchor</string>
    <string name="faw_android">faw_android</string>
    <string name="faw_angellist">faw_angellist</string>
    <string name="faw_angle_double_down">faw_angle_double_down</string>
    <string name="faw_angle_double_left">faw_angle_double_left</string>
    <string name="faw_angle_double_right">faw_angle_double_right</string>
    <string name="faw_angle_double_up">faw_angle_double_up</string>
    <string name="faw_angle_down">faw_angle_down</string>
    <string name="faw_angle_left">faw_angle_left</string>
    <string name="faw_angle_right">faw_angle_right</string>
    <string name="faw_angle_up">faw_angle_up</string>
    <string name="faw_apple">faw_apple</string>
    <string name="faw_archive">faw_archive</string>
    <string name="faw_area_chart">faw_area_chart</string>
    <string name="faw_arrow_circle_down">faw_arrow_circle_down</string>
    <string name="faw_arrow_circle_left">faw_arrow_circle_left</string>
    <string name="faw_arrow_circle_o_down">faw_arrow_circle_o_down</string>
    <string name="faw_arrow_circle_o_left">faw_arrow_circle_o_left</string>
    <string name="faw_arrow_circle_o_right">faw_arrow_circle_o_right</string>
    <string name="faw_arrow_circle_o_up">faw_arrow_circle_o_up</string>
    <string name="faw_arrow_circle_right">faw_arrow_circle_right</string>
    <string name="faw_arrow_circle_up">faw_arrow_circle_up</string>
    <string name="faw_arrow_down">faw_arrow_down</string>
    <string name="faw_arrow_left">faw_arrow_left</string>
    <string name="faw_arrow_right">faw_arrow_right</string>
    <string name="faw_arrow_up">faw_arrow_up</string>
    <string name="faw_arrows">faw_arrows</string>
    <string name="faw_arrows_alt">faw_arrows_alt</string>
    <string name="faw_arrows_h">faw_arrows_h</string>
    <string name="faw_arrows_v">faw_arrows_v</string>
    <string name="faw_assistive_listening_systems">faw_assistive_listening_systems</string>
    <string name="faw_asterisk">faw_asterisk</string>
    <string name="faw_at">faw_at</string>
    <string name="faw_audio_description">faw_audio_description</string>
    <string name="faw_backward">faw_backward</string>
    <string name="faw_balance_scale">faw_balance_scale</string>
    <string name="faw_ban">faw_ban</string>
    <string name="faw_bandcamp">faw_bandcamp</string>
    <string name="faw_bar_chart">faw_bar_chart</string>
    <string name="faw_barcode">faw_barcode</string>
    <string name="faw_bars">faw_bars</string>
    <string name="faw_bath">faw_bath</string>
    <string name="faw_battery_empty">faw_battery_empty</string>
    <string name="faw_battery_full">faw_battery_full</string>
    <string name="faw_battery_half">faw_battery_half</string>
    <string name="faw_battery_quarter">faw_battery_quarter</string>
    <string name="faw_battery_three_quarters">faw_battery_three_quarters</string>
    <string name="faw_bed">faw_bed</string>
    <string name="faw_beer">faw_beer</string>
    <string name="notificationsummary">Gün içerisinde uygulama hakkında en az bir defa kelime öğrenme hakkında hatırlatma yapılır.</string>
    <string name="notificationtitle">Günde bir kelime uyarısı</string>
    <string name="pref_title_ringtone">Zil Tonu</string>
    <string name="pref_title_vibrate">Titreşim</string>
    <string name="sound">Ses</string>
    <string name="ttsdialogtitle">TTS Seslendirme Motorları</string>
    <string name="ttssummary">Seslendirme ilgili motor kullanılır</string>
    <string name="ttstitle">Seslendirme Motoru</string>
    <string name="vibratesummary">Test esnasında geçişler ve uyarı sesleri aktifleştirir</string>
</resources>