<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:entries="@array/pref_options" android:title="@string/exbertitle" android:key="testthreshold" android:summary="@string/ezbertitlesummary" android:defaultValue="8" android:dialogTitle="@string/ezbertitledialogtitle" android:entryValues="@array/pref_values" />
    <ListPreference android:title="@string/ttstitle" android:key="ttsengine" android:summary="@string/ttssummary" android:dialogTitle="@string/ttsdialogtitle" />
    <SwitchPreference android:title="@string/sound" android:key="test_sound_on" android:summary="@string/vibratesummary" android:defaultValue="true" />
    <SwitchPreference android:title="@string/pref_title_vibrate" android:key="test_wrong_vibrate" android:summary="Test esnasında yanlış cevap verilmesinde titreşim çalışır" android:defaultValue="true" />
    <SwitchPreference android:title="@string/notificationtitle" android:key="remind_me" android:summary="@string/notificationsummary" android:defaultValue="true" />
    <RingtonePreference android:title="@string/pref_title_ringtone" android:key="notifications_new_message_ringtone" android:dependency="remind_me" android:defaultValue="content://settings/system/notification_sound" android:ringtoneType="notification|all" />
</PreferenceScreen>
